styles.css
:root {
    --primary: #98b2bf;
    --accent-light: #e2c733;
    --accent-dark: #b53f56;
    --shade-light: #f7f9f8;
    --shade-dark: #29243e;
    --shadow-color: rgba(41,36,62, 0.3);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    padding-bottom: 50px;
    padding-top: 0;
}

h2 {
    text-align: center;
    font-size: 24px;
    font-family: lato, sans-serif;
    margin-bottom: 0.5em;
    padding: 1em 0;
}

p {
    font-family: Georgia, serif;
    margin-bottom: 7px;
}

button {
    border-style: none;
    cursor: pointer;
}

.panel-container {
    padding: auto;
}

.panel-container-white {
    background-color: white;
}

.panel-container-primary {    
    background-color: var(--primary);
}

.panel {
    width: 100%;
    padding: 10px;
    margin: auto;
}

.panel-white h2 {    
    border-bottom: 1px solid var(--shade-dark);
}

.panel-img {
    display: block;
    width: 100%;
    max-width: 600px;
    margin: 10px auto;
}



.logo {
    display: none;
    text-transform: uppercase;
}

/* navbar */

.fixed-nav {
    display: flex;
    position: fixed;
    height: 50px;
    width: 100%;
    top: 100vh;
    transform: translateY(-50px);
    z-index: 100;
}

.menu {
    position: fixed;   
    align-items: center;
    max-height: 400px;
    width: 100%;
    max-width: 300px;
    bottom: 50px;
    transition: transform .2s ease-out;
    transform-origin: bottom;
    z-index:1000;
}
.menu li {
    font-size: 18px;
}

.menu-hidden {
    transform: scale(1,0);
    transform-origin: bottom;
    transition: transform .2s ease-in;
}
.menu-disappear {
    transform: scale(1,0);
    transform-origin: bottom;
    transition: none;
}


.menu li {
    height: 25%;
    width: 100%;
    text-align: center;
    line-height: 100px;
    list-style: none;
    cursor: pointer;
    border-bottom: 1px solid black;
    background-color: var(--shade-dark);    
}
.menu li:last-child {
    border: none;
}
.menu li a:hover, .menu li a:focus {
    background-color: var(--accent-light);
}
.menu li a, .menu li a:active{
    background: none;
    display: flex;       
    justify-content: center;
    color: var(--shade-light);
    text-decoration: none;
    text-transform: uppercase;
    opacity: 1;
    transition: opacity .1s ease-out .1s;
    height: auto;
}
.menu-hidden li a{
    opacity: 0;
    transition: opacity .1s ease-in;
}

.btn-hamburger-menu {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 50px;
    height: 50px;
    background-color: var(--shade-dark);
    z-index: 3;
}

.hamburger-icon {
    position: absolute;   
    width: 30px;
    height: 4px;
    border-radius: 4px;
    background-color: var(--shade-light);
    transition: all .25s ease-in-out;
}
.hamburger-icon:before, .hamburger-icon:after {    
    content: '';
    position: absolute;    
    background-color: var(--shade-light);
    width: 100%;
    height: 4px;
    border-radius: 4px;
    left: 0px;
    transition: all .25s ease-in-out;
    opacity: 1;
}
.hamburger-icon:before {
    bottom: 10px;    
}
.hamburger-icon:after {
    top: 10px;
}
.menu-is-open .hamburger-icon{
    transition: all .25s ease-in-out;
    transform: translateX(-30px);
    background: transparent;
}
.menu-is-open .hamburger-icon:before{
    transition: all .25s ease-in-out;
    transform: translate(30px, 10px) rotate(45deg);
}
.menu-is-open .hamburger-icon:after{
    transition: all .25s ease-in-out;
    transform: translate(30px, -10px) rotate(-45deg);
}

.btn-signup {
    position: relative;
    width: 100%;
    max-width: 100%;
    height: 100%;
    z-index: 2;
}

/* image carousel */

.carousel__container {
    position: relative;
    width:70%;
    max-width: 600px;
    min-width: 250px;
    height: 90%;
    min-height: 300px;
    max-height: 650px;
    margin: 10px auto;
    justify-content: center;
}

.carousel__view {
    position: relative;
    top: 0px;
    margin: 0 auto;
    height: 90%;
    width: 90%;
    max-width: 500px;
    max-height: 600px;
    overflow: hidden;
}

.carousel__track {
    position: absolute;
    list-style: none;
    height: 100%;
    width: 100%;
    transform: translateX(0);
    transition: none;    
}

.track-transition {
    transition: transform 250ms ease-in-out;
}

.carousel__item {
    position: absolute;
    height: 100%;
    width: calc(100% + 1px);
    opacity: 1;
    transition: opacity 250ms ease-in-out;
}

.carousel__item_selected {
    opacity: 1;
}

.carousel__item img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}


.carousel__btn {
    position: absolute;
    background-color: transparent;
    border: none;
    outline: none;
    width: 5%;
    max-width: 30px;
    height: 30px;
    top: 45%;
    transform: translateY(-50%);
    font-size: 30px;
    color: var(--shade-dark);
    opacity: 0.3;
}
.carousel__btn:hover, .carousel__btn:focus {
    opacity: 1;
}

.carousel__btnPrev {
    display: none;
    left: 0;
}
.carousel__btnNext {
    display: block;
    right: 0;
}

.carousel__nav {
    display: flex;
    position: absolute;
    list-style: none;
    top: 93%;
    width: 100%;
    justify-content: center;
}

.carousel__navDot {
    background-color: var(--shade-dark);
    opacity: 0.3;
    height: 14px;
    width: 14px;
    border-radius: 7px;
    margin: 0px 10px;
    cursor: pointer;
    transition: all 250ms ease-in-out;
}
.carousel__navDot:focus {
    outline: none;
    opacity: 1;
}

.carousel__navDot_selected {
    opacity: 1;
    width: 20px;
    margin: 0px 7px;
}

/* other stuff */

.primary {
    background-color: var(--primary);
    display: inline-block;
    width: 200px;
    height: 200px;
}
.btn-dark {
    background-color: var(--accent-dark);
    color: var(--shade-light);
}
.btn-light {
    background-color: var(--accent-light);
    color: var(--shade-dark);
}
.text-dark {
    color: var(--shade-dark);
}
.text-light {
    color: var(--shade-light);
}




@media (min-width: 768px) {
    body {
        padding-top: 50px;
        padding-bottom: 0px;
    }

    .panel {
        max-width: 1200px;        
    }

    .logo {
        display: block;
        position: absolute;
        float: left;
        color: var(--primary);
        width: 10%;
        line-height: 50px;
        margin-left: 2em;
        height: 50px;
        z-index: 9001;
    }
    
    .fixed-nav {
        display:flex;
        top: 0;        
        transform: translateY(0px);
        width: 100%;
        max-width: 1200px;
        background-color: var(--shade-dark);
    }

    .btn-hamburger-menu{
        display: none;
    }

    .btn-signup {
        display: none;
    }
    .menu-hidden {
        transform: scale(1,1);
        transition: none;
    }
    .menu {        
        display: block;
        position: fixed;
        height: 50px;
        width: 80%;
        max-width: 614px;
        margin-left: 20%;
        top: 0px;
        transition: none;
    }
    .menu li {
        display: inline-block;        
        cursor: pointer;
        height: 50px;
        line-height: 50px;
        width: auto;
        opacity: 1;      
        border-bottom: none;
    }
    .menu li a {
        opacity: 1;
        height: 50px;        
        padding-left: 2em;
        padding-right: 2em;
    }

    
    .carousel__container {
        margin-top: 60px;
    }
}


@media (min-width: 1000px) {
    main {
        padding: auto;
    }

    .nav-container {
        position: fixed;
        top: 0px;
        width: 100%;
        height: 50px;
        background-color: var(--shade-dark);
        padding: auto;
        
        z-index: 1000;
    }
    .fixed-nav {
        position: relative;
        margin: auto;
    }
    .menu {
        max-width: 960px;
    }
    
    .panel-img {
        float: left;
        margin: 0 10px 10px 0;
    }
}



.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
       -khtml-user-select: none; /* Konqueror HTML */
         -moz-user-select: none; /* Old versions of Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently
                                    supported by Chrome, Edge, Opera and Firefox */
}

